kubernetes/apps/media/immich/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-internal
  namespace: media
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - photos.krapulax.home
  rules:
    - backendRefs:
        - name: immich
          namespace: media
          port: 2283
